[package]
name = "gitspace"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
dirs = "4.0.0"
git2 = "0.15.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
symlink = "0.1.0"
walkdir = "2.3.2"

